[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/ClientMenu.gd" type="Script" id=1]

[node name="ClientMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ClientMenuTitle" type="Label" parent="."]
margin_left = 448.0
margin_top = 150.0
margin_right = 576.0
margin_bottom = 214.0
text = "PONG

AS A SERVICE


start client"
align = 1
valign = 1

[node name="ClientInputContainer" type="HBoxContainer" parent="."]
margin_left = 256.0
margin_top = 443.158
margin_right = 768.0
margin_bottom = 483.158
custom_constants/separation = 101
alignment = 1

[node name="IPMarginContainer" type="MarginContainer" parent="ClientInputContainer"]
margin_right = 205.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="IPInput" type="LineEdit" parent="ClientInputContainer/IPMarginContainer"]
margin_right = 205.0
margin_bottom = 40.0
text = "10.130.45.184"
align = 1

[node name="PortMarginContainer" type="MarginContainer" parent="ClientInputContainer"]
margin_left = 306.0
margin_right = 512.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="PortInput" type="SpinBox" parent="ClientInputContainer/PortMarginContainer"]
margin_right = 206.0
margin_bottom = 40.0
min_value = 6007.0
max_value = 6010.0
value = 6007.0
align = 1

[node name="ClientInputLabelsContainer" type="HBoxContainer" parent="."]
margin_left = 256.0
margin_top = 483.0
margin_right = 768.0
margin_bottom = 523.0
custom_constants/separation = 101
alignment = 1

[node name="IPMarginContainer" type="MarginContainer" parent="ClientInputLabelsContainer"]
margin_right = 205.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="IPLabel" type="Label" parent="ClientInputLabelsContainer/IPMarginContainer"]
margin_top = 4.0
margin_right = 205.0
margin_bottom = 35.0
text = "Server
IP address"
align = 1
valign = 1

[node name="PortMarginContainer" type="MarginContainer" parent="ClientInputLabelsContainer"]
margin_left = 306.0
margin_right = 512.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="ClientInputLabelsContainer/PortMarginContainer"]
margin_top = 4.0
margin_right = 206.0
margin_bottom = 35.0
text = "Server
port"
align = 1
valign = 1

[node name="ActionButtonsContainer" type="HBoxContainer" parent="."]
margin_left = 256.0
margin_top = 563.0
margin_right = 768.0
margin_bottom = 603.0
custom_constants/separation = 101
alignment = 1

[node name="StartMarginContainer" type="MarginContainer" parent="ActionButtonsContainer"]
margin_left = 89.0
margin_right = 139.0
margin_bottom = 40.0

[node name="StartButton" type="Button" parent="ActionButtonsContainer/StartMarginContainer"]
margin_right = 50.0
margin_bottom = 40.0
text = "START"

[node name="BackMarginContainer" type="MarginContainer" parent="ActionButtonsContainer"]
margin_left = 240.0
margin_right = 282.0
margin_bottom = 40.0

[node name="BackButton" type="Button" parent="ActionButtonsContainer/BackMarginContainer"]
margin_right = 42.0
margin_bottom = 40.0
text = "Back"

[node name="QuitMarginContainer" type="MarginContainer" parent="ActionButtonsContainer"]
margin_left = 383.0
margin_right = 423.0
margin_bottom = 40.0

[node name="QuitButton" type="Button" parent="ActionButtonsContainer/QuitMarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
text = "Quit"
